[build-system]
requires = [
    "setuptools>=61.0",
    "python-dateutil~=2.8.2",
    "requests~=2.28.1",
    "tabula~=1.0.5",
    "beautifulsoup4~=4.8.2",
]

build-backend = "setuptools.build_meta"

[project]
name = "loadshedding"
version = "0.0.1"
authors = [
    { name = "Stephen Booth", email = "stephen.booth.za@gmail.com" },
]
description = "A loadshedding schedule viewer "
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
loadshedding = "main:main"